--- a/src/Game/Resources/AppResources.ru-Ru.resx
+++ b/src/Game/Resources/AppResources.ru-Ru.resx
@@ -209,4 +209,13 @@
   <data name="Warning" xml:space="preserve">
     <value>Внимание!</value>
   </data>
+  <data name="Background" xml:space="preserve">
+    <value>цвет фона</value>
+  </data>
+  <data name="Dark" xml:space="preserve">
+    <value>тёмный</value>
+  </data>
+  <data name="Default" xml:space="preserve">
+    <value>стандартный</value>
+  </data>
 </root>
